# Gent

./: .gitignore  README.md  pyproject.toml  tests.py
.claude/commands/: clarify.md  plan.md
codeagent/: main.py  mcp_integration.py  model_provider.py
codeagent/functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
