[project]
name = "codeagent"
version = "0.1.0"
description = "AI-powered coding agent"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "httpx>=0.28.1",
    "mcp>=1.16.0",
    "rich>=13.0.0",
    "mcp>=1.7.0",
    "httpx>=0.27.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.1.0",
    "requests>=2.32.5",
]

[project.scripts]
codeagent = "codeagent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
